--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,71 +6,29 @@ services:
     container_name: wordpress_db
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: wordpress
-      MYSQL_USER: wordpressuser
-      MYSQL_PASSWORD: wordpresspassword
+      MARIADB_DATABASE: wordpress
+      MARIADB_USER: wordpress
+      MARIADB_PASSWORD: wordpress
+      MARIADB_ROOT_PASSWORD: rootpassword
+      MARIADB_ROOT_HOST: '%'
     volumes:
       - db_data:/var/lib/mysql
 
-  wordpresslocal:
-    image: debian:12
+  wordpress:
+    image: wordpress:latest
     container_name: wordpress_app
     restart: always
-    user: "1000:1000"
+    depends_on:
+      - db
     ports:
       - "8080:80"
     environment:
-#      WORDPRESS_DB_HOST: db:3306
-#      WORDPRESS_DB_USER: wordpressuser
-#      WORDPRESS_DB_PASSWORD: wordpresspassword
-#      WORDPRESS_DB_NAME: wordpress
-      DOMAIN_NAME: docker.flosfreelancesite.com
+      WORDPRESS_DB_HOST: db:3306
+      WORDPRESS_DB_USER: wordpress
+      WORDPRESS_DB_PASSWORD: wordpress
+      WORDPRESS_DB_NAME: wordpress
     volumes:
       - wordpress_data:/var/www/html
-#      - ./install-plugins.sh:/install-plugins.sh
-#      - ./install-theme.sh:/install-theme.sh
-      - ./install_wordpress.sh:/install_wordpress.sh
-    entrypoint: ["/bin/sh", "-c"]
-    command:
-      - |
-        sudo apt update && sudo apt upgrade -y &&
-        sudo apt-get install sudo openssl -y &&
-        chmod +x install_wordpress.sh
-        ./install_wordpress.sh
-#  wordpress:
-#    depends_on:
-#      - db
-#    image: wordpress:latest
-#    container_name: wordpress_app
-#    restart: always
-#    user: "1000:1000"
-#    ports:
-#      - "8080:80"
-#    environment:
-#      WORDPRESS_DB_HOST: db:3306
-#      WORDPRESS_DB_USER: wordpressuser
-#      WORDPRESS_DB_PASSWORD: wordpresspassword
-#      WORDPRESS_DB_NAME: wordpress
-#    volumes:
-#      - wordpress_data:/var/www/html
-#      - ./install-plugins.sh:/install-plugins.sh
-#      - ./install-theme.sh:/install-theme.sh
-#    entrypoint: ["sh", "-c", "apt-get update && apt-get install -y curl && curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && chmod +x wp-cli.phar && mv wp-cli.phar /usr/local/bin/wp && wp"]
-#    entrypoint: ["/bin/sh", "-c"]
-#    command:
-#      - |
-#        wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
-#        chmod +x wp-cli.phar
-#        ls -la
-#        mv wp-cli.phar /usr/local/bin/wp
-#        useradd -G www-data supervisor
-#        wp core install --url=example.com --title=Example --admin_user=supervisor --admin_password=strongpassword --admin_email=info@example.com
-#        pwd
-#        ls -la
-#        chmod +x /install-plugins.sh && chmod +x /install-theme.sh
-#        /install-plugins.sh
-#        /install-theme.sh
 
 volumes:
   db_data:
