--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,8 @@ services:
       - db_data:/var/lib/mysql
 
   wordpress:
-    image: wordpress:latest
+#    image: wordpress:latest
+    build: ./
     container_name: wordpress_app
     restart: always
     depends_on:
