--- a/wordpress-service.yaml
+++ b/wordpress-service.yaml
@@ -12,5 +12,6 @@ spec:
     - name: "8080"
       port: 8080
       targetPort: 8080
+  type: NodePort
   selector:
     io.kompose.service: wordpress
